Implement tokenization
